Modify work queue implement to improve performance